# luerjia-bili

./: .env.example  .gitattributes  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
backend/app/: __init__.py  __main__.py  config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/services/: analyzer.py  exporter.py  job_runner.py  llm_analyzer.py  privacy.py  proxy.py  ranking.py
backend/app/sources/: __init__.py  base.py  bilibili.py  browser.py  parsers.py  taptap.py
backend/tests/: conftest.py  test_analysis_quality.py  test_analyzer.py  test_api.py  test_browser_session.py  test_live_collection_regressions.py  test_parsers.py  test_privacy.py  test_proxy.py  test_ranking.py  test_security.py
backend/tests/fixtures/: bilibili_login.html  bilibili_search.html  bilibili_space.html  bilibili_video.html  taptap.html  taptap_app_current.html  (+1 more)
deploy/: autobili-cert-renew.service  autobili-cert-renew.timer  autobili.env.example  autobili.service  enable-https.sh  install.sh  model-smoke.sh  model_smoke.py  nginx-autobili-ssl.conf  nginx-autobili.conf  pdf-smoke.sh  pdf_smoke.py  update.sh
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts  fixtures.ts  live.spec.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_sources_auth_sharing.py  0003_analysis_modes.py  0004_repair_taptap_scope.py
scripts/: dev.ps1  setup.ps1  start.ps1
(+9 files in other folders)
