[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luerjia-bili"
version = "0.2.0"
description = "Private Bilibili and TapTap sentiment analysis tool"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "aiosqlite>=0.20,<1",
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jieba>=0.42,<1",
  "numpy>=2.0,<3",
  "playwright>=1.50,<2",
  "pydantic-settings>=2.7,<3",
  "scikit-learn>=1.6,<2",
  "sqlalchemy>=2.0,<3",
  "transformers>=4.48,<6",
  "torch>=2.5,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008", "E501", "UP012", "UP017", "UP042"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
